[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rivermarkets"
version = "0.3.0"
description = "Python SDK for the River Markets API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "River Markets", email = "support@rivermarkets.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0",
    "pynacl>=1.5.0",
    "typing_extensions>=4.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://rivermarkets.com"
Documentation = "https://docs.rivermarkets.com"
Repository = "https://github.com/rivermarkets/rivermarkets-python-sdk"
Issues = "https://github.com/rivermarkets/rivermarkets-python-sdk/issues"

[tool.setuptools.packages.find]
include = ["rivermarkets*"]
